--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: 'Setup Swift environment'
+name: 'Setup Swift Action'
 description: 'Setup a Swift environment'
 author: 'TG908'
 branding:
@@ -12,7 +12,7 @@ inputs:
   platform:
     description: 'Platform'
     required: true
-    default: 'ubuntu18.04'
+    default: 'osx'
 runs:
   using: 'node12'
   main: 'dist/index.js'
