--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "setup-swift-action",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "private": true,
   "description": "Setup a Swift environment",
   "main": "lib/main.js",
@@ -27,6 +27,7 @@
   "dependencies": {
     "@actions/core": "^1.2.0",
     "@actions/exec": "^1.0.2",
+    "@actions/io": "^1.0.1",
     "@actions/tool-cache": "^1.1.2"
   },
   "devDependencies": {
