--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,7 @@ jobs:
   build: # make sure build/ci work properly
     strategy:
       matrix:
-        os: [ubuntu-18.04]
+        os: [ubuntu-16.04, ubuntu-18.04, macOS-10.14, macOS-latest]
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v2
@@ -20,14 +20,13 @@ jobs:
     needs: [build]
     strategy:
       matrix:
-        os: [ubuntu-18.04]
+        os: [ubuntu-16.04, ubuntu-18.04, macOS-10.14, macOS-latest]
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v2
     - uses: ./
       with:
         version: '5.1.3'
-        platform: ubuntu-18.04
     - run: swift --version
   publish:
     needs: [build, test]
