--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "setup-swift-action",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "private": true,
   "description": "Setup a Swift environment",
   "main": "lib/main.js",
@@ -15,14 +15,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/TG908/setup-swift.git"
+    "url": "git+https://github.com/tgymnich/setup-swift.git"
   },
   "keywords": [
     "actions",
     "node",
     "setup"
   ],
-  "author": "YourNameOrOrganization",
+  "author": "tgymnich",
   "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.2.6",
@@ -31,18 +31,18 @@
     "@actions/tool-cache": "^1.6.1"
   },
   "devDependencies": {
-    "@types/jest": "^24.9.1",
-    "@types/node": "^12.19.4",
-    "@typescript-eslint/parser": "^2.34.0",
-    "@zeit/ncc": "^0.20.5",
-    "eslint": "^5.16.0",
-    "eslint-plugin-github": "^2.0.0",
-    "eslint-plugin-jest": "^22.21.0",
-    "jest": "^24.9.0",
-    "jest-circus": "^24.9.0",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^14.14.7",
+    "@typescript-eslint/parser": "^4.8.1",
+    "@zeit/ncc": "^0.22.3",
+    "eslint": "^7.0.0",
+    "eslint-plugin-github": "^4.1.1",
+    "eslint-plugin-jest": "^24.1.3",
+    "jest": "^26.6.3",
+    "jest-circus": "^26.6.3",
     "js-yaml": "^3.14.0",
-    "prettier": "^1.19.1",
-    "ts-jest": "^24.3.0",
-    "typescript": "^3.9.7"
+    "prettier": "^2.1.2",
+    "ts-jest": "^26.4.4",
+    "typescript": "^4.0.5"
   }
 }
