--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,7 @@ jobs:
     needs: [build]
     strategy:
       matrix:
-        os: [ubuntu-16.04, ubuntu-18.04, macOS-10.14, macOS-latest]
+        os: [ubuntu-16.04, ubuntu-18.04, macOS-latest]
         swift: ['4.2.4', '5.0', '5.1.3']
     runs-on: ${{ matrix.os }}
     steps:
